still work todo

--- a/src/main/resources/Static/html/admin-show-orders-from-customer.html
+++ b/src/main/resources/Static/html/admin-show-orders-from-customer.html
@@ -29,7 +29,7 @@
             </h2>
         </div>
         <div class="collapse">
-            <div class="card-body order" >
+            <div class="card-body order">
 
 
             </div>
@@ -40,12 +40,12 @@
     <tfoot>
 
     <td>
-        <a href="index.html" class="btn btn-success" id="logout">
+        <a href="index.html" class="btn btn-outline-success" id="logout">
             Log out <span class="glyphicon glyphicon-log-out"></span>
         </a>
     </td>
     <td>
-        <a href="admin-show-customers.html" class="btn btn-success" id="goBack">
+        <a href="admin-show-customers.html" class="btn btn-outline-success" id="goBack">
             Go back <span class="glyphicon glyphicon-log-out"></span>
         </a>
     </td>
