special push for VALLE

--- a/src/main/resources/Static/html/productPage.html
+++ b/src/main/resources/Static/html/productPage.html
@@ -43,11 +43,16 @@
                 <tr>
                 <td>
                     <a href="index.html" class="btn btn-success" id="logout">
-                        Log out <span class="glyphicon glyphicon-log-out"></span>
+                        Log out <span class=""></span>
                     </a>
                 </td>
                     <td>
-                        <a href="checkOutCartPage.html" class="btn btn-outline-secondary">Checkout <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="checkOutCartPage.html" class="btn btn-outline-secondary">
+                            Checkout
+                            <span class="badge badge-light" id="quantityCounter"></span>
+                        </a>
+
+
                     </td>
                 </tr>
                 </tbody>
