Fixed counter on quantity. Removed important headers in receiptpage

--- a/src/main/resources/Static/html/receiptPage.html
+++ b/src/main/resources/Static/html/receiptPage.html
@@ -15,7 +15,7 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th>Product</th>
+                    <th>Receipt page</th>
                     <th> </th>
                     <th class="text-center">Price</th>
                     <th class="text-center">Quantity</th>
