--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="../css/login.css" rel="stylesheet"/>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -22,7 +24,6 @@
     <div class="col-md-6 col-sm-12">
         <div class="login-form">
             <form id="login-form">
-
                 <div class="form-group">
                     <label>User Name</label>
                     <input type="text" class="form-control" placeholder="Username" id="username">
@@ -36,6 +37,7 @@
                 <a href="" id="login-redirect">
                 <button type="submit" class="btn btn-black" id="submit">Login</button>
                 </a>
+                <i id="errormsg"></i>
             </form>
                     <a href="registrate-customer.html">
                         <button class="btn btn-secondary" id="register">Register</button>
