HTML and CSS formatting, plus directory name correction.

--- a/src/main/resources/static/html/checkOutCartPage.html
+++ b/src/main/resources/static/html/checkOutCartPage.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
 </head>
 <body>
 <div class="container">
@@ -17,7 +17,7 @@
                 <thead>
                 <tr>
                     <th>Product</th>
-                    <th> </th>
+                    <th></th>
                     <th class="text-center">Price</th>
                     <th class="text-center">Quantity</th>
                     <th> </th>
@@ -36,10 +36,12 @@
                     <td>  </td>
                     <td>  </td>
                     <td>
-                        <a href="productPage.html" class="btn btn-success">Continue Shopping <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="productPage.html" class="btn btn-success">Continue Shopping <span
+                                class="glyphicon glyphicon-play"></span></a>
                     </td>
                     <td>
-                        <a href="receiptPage.html" class="btn btn-success" onclick="confirmOrder()">Checkout <span class="glyphicon glyphicon-play"></span></a>
+                        <a href="receiptPage.html" class="btn btn-success" onclick="confirmOrder()">Checkout <span
+                                class="glyphicon glyphicon-play"></span></a>
                     </td>
                 </tr>
                 </tbody>
