--- a/src/main/resources/static/html/receiptPage.html
+++ b/src/main/resources/static/html/receiptPage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </head>
@@ -16,7 +17,7 @@
                 <thead>
                 <tr>
                     <th>Receipt page</th>
-                    <th> </th>
+                    <th></th>
                     <th class="text-center">Price</th>
                     <th class="text-center">Quantity</th>
                     <th> </th>
