--- a/src/main/resources/static/html/registrate-customer.html
+++ b/src/main/resources/static/html/registrate-customer.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Admin Customer Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -15,7 +14,8 @@
 <div class="container">
     <div class="sidenav">
         <div class="login-main-text">
-            <h2>Application</h2><h3>Registrate Page</h3>
+            <h2>Application</h2>
+            <h3>Registrate Page</h3>
             <p>Register here to get access.</p>
         </div>
         <div id="result-message">
@@ -26,7 +26,8 @@
             <form id="customer-form" class="login-form needs-validation" novalidate>
                 <div class="form-row">
                     <label for="inputname">First Name</label>
-                    <input type="text" class="form-control" id="inputname" placeholder="..." required> <!--#inputname för att hämta värdet-->
+                    <input type="text" class="form-control" id="inputname" placeholder="..." required>
+                    <!--#inputname för att hämta värdet-->
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -36,7 +37,8 @@
                 </div>
                 <div class="form-row">
                     <label for="inputname">Last Name</label>
-                    <input type="text" class="form-control" id="inputlastname" placeholder="..." required> <!--#inputlastname för att hämta värdet-->
+                    <input type="text" class="form-control" id="inputlastname" placeholder="..." required>
+                    <!--#inputlastname för att hämta värdet-->
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -46,7 +48,8 @@
                 </div>
                 <div class="form-row">
                     <label for="inputEmail">Email</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="..."  required> <!--#inputEmail för att hämta värdet-->
+                    <input type="email" class="form-control" id="inputEmail" placeholder="..." required>
+                    <!--#inputEmail för att hämta värdet-->
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -56,21 +59,22 @@
                 </div>
                 <div class="form-row">
                     <label for="inputPassword">Password</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="..." required> <!--#inputPassword för att hämta värdet-->
+                    <input type="password" class="form-control" id="inputPassword" placeholder="..." required>
+                    <!--#inputPassword för att hämta värdet-->
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                     <div class="invalid-feedback">
                         Please choose a Password.
                     </div>
-                <div class="form-row">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="inputCheckbox">
-                        <label class="form-check-label" for="inputCheckbox" id="check-label">
-                            Show password
-                        </label>
+                    <div class="form-row">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="inputCheckbox">
+                            <label class="form-check-label" for="inputCheckbox" id="check-label">
+                                Show password
+                            </label>
+                        </div>
                     </div>
-                </div>
                 </div>
                 <br>
                 <div class="col-md">
@@ -79,9 +83,9 @@
                 </div>
             </form>
             <br>
-                <a href="index.html">
-                    <button type="button" class="btn btn-outline-secondary" id="go -back-button">Go back and Log in</button>
-                </a>
+            <a href="index.html">
+                <button type="button" class="btn btn-outline-secondary" id="go -back-button">Go back and Log in</button>
+            </a>
         </div>
     </div>
 </div>
