--- a/src/main/resources/static/html/admin-show-orders-from-customer.html
+++ b/src/main/resources/static/html/admin-show-orders-from-customer.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Admin Show Orders From Customer Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -24,32 +23,26 @@
     </table>
     <div class="card">
         <div class="card-header">
-            <h2 class="mb-0">
-
-            </h2>
+            <h2 class="mb-0"></h2>
         </div>
         <div class="collapse">
-            <div class="card-body order">
-
-
-            </div>
+            <div class="card-body order"></div>
         </div>
     </div>
 
     <table>
-    <tfoot>
-
-    <td>
-        <a href="index.html" class="btn btn-outline-success" id="logout">
-            Log out <span class="glyphicon glyphicon-log-out"></span>
-        </a>
-    </td>
-    <td>
-        <a href="admin-show-customers.html" class="btn btn-outline-success" id="goBack">
-            Go back <span class="glyphicon glyphicon-log-out"></span>
-        </a>
-    </td>
-    </tfoot>
+        <tfoot>
+        <td>
+            <a href="index.html" class="btn btn-outline-success" id="logout">
+                Log out <span class="glyphicon glyphicon-log-out"></span>
+            </a>
+        </td>
+        <td>
+            <a href="admin-show-customers.html" class="btn btn-outline-success" id="goBack">
+                Go back <span class="glyphicon glyphicon-log-out"></span>
+            </a>
+        </td>
+        </tfoot>
     </table>
 </div>
 </body>
