--- a/src/main/resources/static/html/search.html
+++ b/src/main/resources/static/html/search.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+          rel="stylesheet"
           id="bootstrap-css">
     <link href="../css/products.css" rel="stylesheet">
     <title>Product search</title>
